# mtg-dataset

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  pytest.ini  requirements.txt  requirements_convert.txt  setup.py
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: python-test.yml
examples/: common.py  requirements.txt  train_simple_gan.py  train_simple_gan_vae.py  train_simple_vae.py  vae.py
examples/experiments/: nn_weights.py
examples/light_gan/: train.py
examples/nn/: components.py  loss.py  model.py  model_alt.py  shuffle.py
examples/server/: client.py  img_dashboard.py
examples/server/util/: collections.py
examples/shared_gan/: train.py
examples/simple_gan/: train.py
examples/simple_vae/: train.py  vae.py
examples/simple_vae/nn/: helper.py  kornia.py  loss.py  model.py  model_alt.py  shuffle.py
examples/simple_vae_gan/: train.py
examples/util/: iter.py
mtgdata/: __init__.py  __main__.py  scryfall.py  scryfall_convert.py
mtgdata/util/: __init__.py  hdf5.py  inout.py  proxy.py
mtgml/: alt.py  dataset.py  inout.py  json.py  scryfall.py  scryfall_convert.py
mtgml/util/: collections.py  hdf5.py  inout.py  proxy.py
